rtest/tests/jsr335/Semantics/LambdaTypeAnalysis/AssignmentContext/ShouldFail/syntax03/Test.java
// .result=COMPILE_FAIL

public class Test {
	public interface TestInterface {
		 public void m();
	}
	
	public static void main(String[] args) {
		TestInterface t = 5 + () -> {};
    }
}
